--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,9 @@ body {
 p {
 	line-height: 1.4;
 }
+
+input {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
